--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "cordova-plugin-network-information": "^3.0.0",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-whitelist": "^1.3.5",
-    "phonegap-plugin-push": "^2.3.0"
+    "cordova-plugin-whitelist": "^1.3.5"
   },
   "cordova": {
     "plugins": {
@@ -40,8 +39,10 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-splashscreen": {},
+      "cordova-support-google-services": {},
       "phonegap-plugin-push": {
-        "FCM_VERSION": "11.0.1"
+        "FCM_VERSION": "23.0.0",
+        "ANDROID_SUPPORT_V13_VERSION": "27.+"
       }
     },
     "platforms": [
@@ -51,6 +52,7 @@
   "devDependencies": {
     "cordova-android": "^11.0.0",
     "cordova-support-google-services": "~1.3.1",
-    "phonegap-plugin-multidex": "~1.0.0"
+    "phonegap-plugin-multidex": "~1.0.0",
+    "phonegap-plugin-push": "^2.3.0"
   }
 }
