--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
       "cordova-plugin-dialogs": {},
       "cordova-plugin-splashscreen": {},
       "cordova-support-google-services": {},
-      "phonegap-plugin-push": {
-        "FCM_VERSION": "23.0.0",
-        "ANDROID_SUPPORT_V13_VERSION": "27.+"
+      "cordova-plugin-firebasex": {
+        "ANDROID_FIREBASE_BOM_VERSION": "33.5.1",
+        "ANDROID_GOOGLE_SERVICES_VERSION": "4.4.2"
       }
     },
     "platforms": [
@@ -50,9 +50,9 @@
     ]
   },
   "devDependencies": {
-    "cordova-android": "^11.0.0",
+    "cordova-android": "^14.0.1",
+    "cordova-plugin-firebasex": "^19.0.1",
     "cordova-support-google-services": "~1.3.1",
-    "phonegap-plugin-multidex": "~1.0.0",
-    "phonegap-plugin-push": "^2.3.0"
+    "phonegap-plugin-multidex": "~1.0.0"
   }
 }
